--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,7 +25,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: GYOYOUNG
+          github_user_name: Ella-ki
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
