--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,7 +28,7 @@ jobs:
           github_user_name: Ella-ki
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake-dark.svg?color_snake=#58A6FF&color_dots=#EEEEEE,#FFF78A,#FFE382,#FFC47E,#FFAD84?palette=github-dark
 
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
